--- a/style.css
+++ b/style.css
@@ -27,16 +27,33 @@ img {
     font-size: 4rem;
 }
 
-._2col {
-    margin: 120px;
+.grid-base {
     display: grid;
-    grid-template-columns: 1fr 3fr;
-    gap: 50px;
     width: 80%;
     margin: auto;
     margin-top: 40px;
+    margin-bottom: 50px;
+}
+
+._2col {
+    grid-template-columns: 1fr 3fr;
+    gap: 50px;
 }
 
 .info p {
     font-size: 1.25em;
+}
+
+._3col {
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 100px;
+}
+
+.card {
+    background-color: rgb(0, 0, 140);
+}
+
+.card-txt {
+    text-align: center;
+    color: whitesmoke;
 }
